<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/topping"
            android:text="@string/topping"
            style="@style/HeaderTextStyle" />

        <CheckBox
            android:id="@+id/whippedcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="24dp"
            android:text="@string/chocolate" />

        <TextView
            android:id="@+id/quantity"
            style="@style/HeaderTextStyle"
            android:contentDescription="@string/quantity"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/nameOfClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/plus"
                style="@style/buttons"/>

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/minus"
                style="@style/buttons"/>
        </LinearLayout>

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            style="@style/buttons"/>
    </LinearLayout>
</ScrollView>
